--- a/components/header.html
+++ b/components/header.html
@@ -3,7 +3,13 @@
         <div class="header__content">
             <div class="header__brand">
                 <a href="index.html" class="header__brand-link">
-                    <img src="assets/images/favicon/blum_logo_main.png" alt="BLum logo" class="header__logo" />
+                    <img
+                        src="assets/images/favicon/blum_logo_main.png"
+                        alt="BLum logo"
+                        class="header__logo"
+                        width="797"
+                        height="797"
+                    />
                     <div class="header__brand-text">
                         <h1 class="header__title" id="site-title">BLum</h1>
                         <p class="header__subtitle" id="site-subtitle">Urbana mobilnost Banja Luka</p>
