feat: add static data pages for pricing, faq, updates, and airport

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,3 +7,7 @@
 @use 'layout';
 @use 'components';
 @use 'utilities';
+@use 'pages/price-tables';
+@use 'pages/faq';
+@use 'pages/updates';
+@use 'pages/map-legend';
