--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -14,7 +14,7 @@ interface Props {
 }
 
 const { pageKey, title, description, canonicalUrl, pageStyles } = Astro.props;
-const ogImage = 'https://blum.ba/assets/images/gradski-prevoz-mapa-banja-luka.webp';
+const ogImage = 'https://open-data-bih.github.io/blum-project/assets/images/gradski-prevoz-mapa-banja-luka.webp';
 ---
 
 <!doctype html>
