--- a/src/pages/airport.astro
+++ b/src/pages/airport.astro
@@ -7,7 +7,7 @@ import AirportMap from '../components/AirportMap.astro';
   pageKey="airport"
   title="Aerodromski prevoz | BLum"
   description="Informacije o prevozu do i od Medjunarodnog aerodroma Banja Luka, ukljucujuci cijene, stajalista i polaske."
-  canonicalUrl="https://blum.ba/airport/"
+  canonicalUrl="https://open-data-bih.github.io/blum-project/airport/"
 >
   <section class="section section--wide" id="airport">
     <div class="container">
