--- a/src/pages/faq.astro
+++ b/src/pages/faq.astro
@@ -7,7 +7,7 @@ import FAQSection from '../components/FAQSection.astro';
   pageKey="faq"
   title="FAQ | BLum"
   description="Najcesca pitanja i odgovori o koristenju BLum platforme, linijama, kartama i javnom prevozu u Banjoj Luci."
-  canonicalUrl="https://blum.ba/faq/"
+  canonicalUrl="https://open-data-bih.github.io/blum-project/faq/"
 >
   <section class="section section--narrow" id="faq">
     <div class="container">
