--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import BaseLayout from '../layouts/BaseLayout.astro';
   pageKey="home"
   title="Pocetna | BLum"
   description="BLum je nezavisna platforma za informacije o javnom prevozu, linijama i urbanoj mobilnosti u Banjoj Luci."
-  canonicalUrl="https://blum.ba/"
+  canonicalUrl="https://open-data-bih.github.io/blum-project/"
 >
   <section class="hero">
     <div class="container">
