--- a/src/pages/lines.astro
+++ b/src/pages/lines.astro
@@ -92,7 +92,7 @@ processedLines.sort(sortLinesByID);
   pageKey="lines"
   title="Red voznje i linije | BLum"
   description="Pregled gradskih i prigradskih linija, mape trasa i reda voznje javnog prevoza u Banjoj Luci."
-  canonicalUrl="https://blum.ba/lines/"
+  canonicalUrl="https://open-data-bih.github.io/blum-project/lines/"
 >
   <!-- Urban Lines Map Section -->
   <section class="section section--wide" id="urban-lines">
