--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -7,7 +7,7 @@ import PricingSection from '../components/PricingSection.astro';
   pageKey="pricing"
   title="Cjenovnik | BLum"
   description="Aktuelne cijene karata i pretplatnih opcija za javni prevoz u Banjoj Luci na jednom mjestu."
-  canonicalUrl="https://blum.ba/pricing/"
+  canonicalUrl="https://open-data-bih.github.io/blum-project/pricing/"
 >
   <section class="section section--narrow" id="pricing">
     <div class="container">
