--- a/src/pages/updates.astro
+++ b/src/pages/updates.astro
@@ -7,7 +7,7 @@ import UpdatesSection from '../components/UpdatesSection.astro';
   pageKey="updates"
   title="Obavjestenja | BLum"
   description="Najnovija obavjestenja o izmjenama linija, redu voznje i servisnim informacijama javnog prevoza u Banjoj Luci."
-  canonicalUrl="https://blum.ba/updates/"
+  canonicalUrl="https://open-data-bih.github.io/blum-project/updates/"
 >
   <section class="section section--narrow" id="updates">
     <div class="container">
